Add comment system. And post count system in for each discussion in

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A status app for friend circles",
   "main": "app.js",
   "scripts": {
-    "GOo": "nodemon app.js"
+    "XXX": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
